# Termite-sumu

./: .gitignore  CHANGELOG.md  HUNTED_BUGS_AND_ERRORS.txt  INSTALL.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
core/: audit.py  base_connector.py  connector_factory.py  credentials.py  evasion.py  exploit_launcher.py  go_bridge.py  log_analyzer.py  log_collector.py  redteam.py  reverse_shell.py  smb_connector.py  ssh_connector.py  telnet_connector.py  validators.py  winrm_connector.py
core/defense/: __init__.py  scanner.py
core/reversing/: __init__.py  analyzer.py
core/steg/: __init__.py  detector.py
cpp_native/: Makefile
cpp_native/src/: injector.cpp
gobackend/: go.mod  main.go
gobackend/api/: handlers.go
gobackend/listener/: manager.go
gobackend/payload/: generator.go
gobackend/session/: manager.go
gui/: analysis_tab.py  connection_dialog.py  device_tree.py  exploit_launcher_tab.py  log_viewer.py  main_window.py  output_reader.py  properties_panel.py  redteam_tab.py  reference_tab.py  reverse_shell_tab.py  terminal_widget.py
reports/: pdf_report.py
scripts/post_exploit/: linux_privesc_enum.sh
tests/: conftest.py  test_evasion.py  test_gui_smoke.py  test_imports.py  test_settings.py  test_validators.py
